--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,38 +5,17 @@ services:
     restart: always
     ports:
       - "8080:8080"
-    depends_on:
-      - db
     environment:
-      - DB_HOST=db
-      - DB_PORT=5432
-      - DB_NAME=rust_backend
-      - DB_USER=postgres
-      - DB_PASSWORD=postgres
-      - JWT_SECRET=your_jwt_secret_key
-      - RUST_LOG=info
-    networks:
-      - app-network
-
-  db:
-    image: postgres:14-alpine
-    container_name: postgres-db
-    restart: always
-    ports:
-      - "5433:5432"
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=rust_backend
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
-      - ./migrations:/docker-entrypoint-initdb.d
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - JWT_SECRET=${JWT_SECRET}
+      - RUST_LOG=${RUST_LOG}
     networks:
       - app-network
 
 networks:
   app-network:
     driver: bridge
-
-volumes:
-  postgres-data:
