--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,9 @@
-# Database Configuration
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=rust_backend
-DB_USER=postgres
-DB_PASSWORD=postgres
-
 # JWT Configuration
 JWT_SECRET=your_jwt_secret_key
 
 # Server Configuration
-SERVER_HOST=127.0.0.1
-SERVER_PORT=8080
+DATABASE_URL=your_database_url
+REDIS_URL=redis://127.0.0.1:6379
 
 # Logging
 RUST_LOG=info
