--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-rustls", "postgres
 utoipa = { version = "5.3.1", features = ["actix_extras"] }
 utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
 futures-util = "0.3.29"
+redis = { version = "0.23.0", features = ["tokio-comp"] }
 
 # Specify the binary target
 [[bin]]
