--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,8 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
+      - DATABASE_URL=${DATABASE_URL}
+      - REDIS_URL=${REDIS_URL}
       - JWT_SECRET=${JWT_SECRET}
       - RUST_LOG=${RUST_LOG}
     networks:
