chore: update environment variable defaults in main.rs and add CARGO_PKG_VERSION to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - REDIS_URL=${REDIS_URL}
       - JWT_SECRET=${JWT_SECRET}
       - RUST_LOG=${RUST_LOG}
+      - CARGO_PKG_VERSION=${CARGO_PKG_VERSION}
     networks:
       - app-network
 
