--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,8 @@ sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-rustls", "postgres
 utoipa = { version = "5.3.1", features = ["actix_extras"] }
 utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
 futures-util = "0.3.29"
-redis = { version = "0.23.0", features = ["tokio-comp"] }
+redis = { version = "0.29.1", features = ["tokio-comp", "connection-manager"] }
+tokio = { version = "1.36.0", features = ["full", "sync"] }
 
 # Specify the binary target
 [[bin]]
