--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,16 @@ utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
 futures-util = "0.3.29"
 redis = { version = "0.29.1", features = ["tokio-comp", "connection-manager"] }
 tokio = { version = "1.36.0", features = ["full", "sync"] }
+# 2FA dependencies
+totp-rs = "5.5.1"
+data-encoding = "2.5.0"
+qrcode = "0.13.0"
+image = "0.24.8"
+base64 = "0.21.7"
+rand = "0.8.5"
+urlencoding = "2.1.3"
+sha2 = "0.10.8"
+hex = "0.4.3"
 
 # Specify the binary target
 [[bin]]
