--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,8 +31,7 @@ tokio = { version = "1.36.0", features = ["full", "sync"] }
 # 2FA dependencies
 totp-rs = "5.5.1"
 data-encoding = "2.5.0"
-qrcode = "0.13.0"
-image = "0.24.8"
+qrcode-generator = "4.1.6"
 base64 = "0.21.7"
 rand = "0.8.5"
 urlencoding = "2.1.3"
